@@ -1,3 +1,7 @@
+2015-06-22  Youri Hoogstrate
+	* Changed variable i n test/ReadSegments_test.cpp to const
+	* Configuration for Travis CI
+
 2015-06-19  Youri Hoogstrate
 	* Changed to a more robust definition of the c++11 standard: c++0x
 
